implement update entries
