# server/model/status.go
@@ -1,8 +1,0 @@
-package model
-
-type Status string
-
-const (
-	ReadStatus   Status = "read"
-	UnreadStatus Status = "unread"
-)
